# autonomous-agentic-covenant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
cookbook/: AAC_Governance_Cookbook_v1.0.md  README.md
covenant/: AAC_v1.3.md  AAC_v2.0_DRAFT.md  Autonomous_Agentic_Covenant_v1_3.docx  Autonomous_Agentic_Covenant_v2.0.md
crosswalk/: AAC_ATLAS_Crosswalk_v1_0.docx  AAC_ATLAS_Crosswalk_v2.0.md  AAC_EU_AI_Act_Crosswalk_v2.0.md  AAC_EU_AI_Act_Crosswalk_v2_0.md  AAC_Framework_Crosswalk_v1_0.docx  AAC_Framework_Crosswalk_v2.0.md  AAC_Framework_Crosswalk_v2_0.md
demos/gate-viewer/: aac_gate_viewer.html
governance/samples/: AAC-v2.0-instance fsi.json  med-advisor-policy.json
governance/schemas/: covenant-v2.json
profiles/: AAC_Implementation_Profile_L1_v2.0.md  AAC_Implementation_Profile_L2L3_v2.0.md  AAC_Implementation_Profile_v1_0.docx
toolkit/: GUIDE.md  pyproject.toml
toolkit/src/aval/: __init__.py  arbitration.py  cli.py  confidence.py  liveness.py  maturity.py  models.py  output.py  tracer.py  validator.py
toolkit/test_suite/: failing_simulation_action.json  invalid_syntax.json  valid_l1_covenant.json
